-- Homepage - fix z-index

--- a/src/scss/7-components/_main-header.scss
+++ b/src/scss/7-components/_main-header.scss
@@ -1,7 +1,7 @@
 @use '../abstract' as *;
 
 .#{$p}-main-header {
-  position:sticky; inset-block-start:0; background-color:hsl(var(--p-body-bg-color));
+  position:sticky; z-index:20; inset-block-start:0; background-color:hsl(var(--p-body-bg-color));
   padding-block-start:pxToRem(20); padding-block-end:pxToRem(24);
   &-wrapper { display:flex; flex-direction:column; gap:pxToRem(14); }
   &-row { display:flex; }
